--- a/AvaloniaApplication1/MainWindow.axaml
+++ b/AvaloniaApplication1/MainWindow.axaml
@@ -5,15 +5,16 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="AvaloniaApplication1.MainWindow"
         Title="AvaloniaApplication1"
-        MinHeight="90"
+        MinHeight="190"
         MinWidth="520"
         MaxWidth="520"
-        MaxHeight="90"
-        Height="90"
+        MaxHeight="190"
+        Height="190"
         Width="520"
         >
   <StackPanel>
     <TextBlock>Привествую вас в Парсере пожалуйста выбер файл для конвертации</TextBlock>
+    <Button Name="btn2"  Click="OnClickCommand2"  >Начать процесс</Button>
     <Button Name="btn"  Click="OnClickCommand"  >Выбрать файл</Button>
     <Button Name="btn1"  Click="OnClickCommand1"  >Путь для ковертации</Button>
   </StackPanel>
